--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyD7WFm71bDDX8HQSpN_NiwUqhSuLBAIcAA",
+        authDomain: "pdf-extender.firebaseapp.com",
+        projectId: "pdf-extender",
+        storageBucket: "pdf-extender.firebasestorage.app",
+        messagingSenderId: "148663448187",
+        appId: "1:148663448187:web:b5cc298a8f444d64a2e8de",
+        measurementId: "G-JYPQZS7P7L",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </head>
   <body>
     <div class="drag-area" id="dragArea"></div>
@@ -37,6 +55,11 @@
             href="mailto:kim4web@gmail.com"
             >kim4web@gmail.com</a
           >
+        </p>
+
+        <p style="margin-bottom: 0; margin-top: auto">
+          Mit der Nutzung dieser App stimmst du der Verwendung von Cookies und
+          Analyse-Tools zu.
         </p>
       </div>
 
