--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
             max="300"
             value="100"
           />
+
+          <label for="lineCheckbox">Trennline:</label>
+          <input
+            type="checkbox"
+            id="lineCheckbox"
+          />
         </div>
 
         <div class="island">
